applications/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
spec:
  ports:
    - port: 4444
      protocol: TCP
      name: http
      targetPort: 3000
  selector:
    app: grafana
    app.kubernetes.io/name: grafana
  sessionAffinity: None
